<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PGPY</string>
    <string name="hello_world">Proximamente!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pdidetalle">Detalles del Punto de Interes</string>
    <string name="pdiTitle">Titulo</string>
    <string name="pdiCategoria">Categoria: </string>
    <string name="pdiDescripcion">Descripcion: </string>
    <string name="pdiDireccion">Direccion: </string>
    <string name="pdiTelefono">Telefono: </string>
    <string name="pdiUrl">Url: </string>
    <string name="pdiEmail">Correo Electronico: </string>
    <string name="pdiNombre">Nombre: </string>
    <string name="pdiImagen">Tomar Imagen </string>
    <string name="pdiDistancia">Distancia: </string>
    <string name="pdiAnuncio">Distancia: </string>
    <string name="categoria">categoria </string>
    <string name="descripcion">descripcion </string>
    <string name="direccion">direccion </string>
    <string name="telefono">telefono </string>
    <string name="url">url </string>
    <string name="errorImg">Imagen no encontrada </string>
    <string name="pdi">PDI </string>
    <string name="email">email </string>
    <string name="distancia">distancia </string>
    <string name="botonBuscar">Buscar</string>
	<string name="regPDI">Registrar PDI</string>
    <string name="actPDI">Actualizar PDI</string>    
    <string name="correo_Sesion">Correo Electronico:</string>
    <string name="cont_Sesion">Contraseña:</string>
    <string name="conf_cont_Sesion">Confirmar Contraseña:</string>
    <string name="registrar_anuncio">Registrar Anuncio</string>
    <string name="actualizar_anuncio">Actualizar Anuncio</string>
    <string name="anuncioTitulo">Titulo: </string>
    <string name="anuncioCategoria">Categoria: </string>
    <string name="anuncioDescripcion">Descripcion: </string>
    <string name="boton_Registro">Registrar</string>
    <string name="boton_Actualizar">Actualizar</string>
    <string name="boton_Inicio">Iniciar Sesion</string>
    <string name="anuncio">Anuncio</string>  
    <string name="title_activity_busqueda_simple">Busqueda</string>
    <string name="title_activity_visualizar_lista">Puntos de interes cercanos</string>
    <string name="title_activity_registro_pdi">Registrar punto de interes</string>
    <string name="title_activity_actualizar_pdi">Actualizar punto de interes</string>
    <string name="title_activity_lista_mis_pdi">Mis puntos de interes</string>
    <string name="title_activity_lista_mis_favoritos">Mis favoritos</string>
    <string name="title_activity_registrar_usuario">Registrar Usuario</string>
    <string name="title_activity_iniciar_sesion">Iniciar Sesion</string>
    <string name="title_activity_perfil">Mi perfil</string>
    <string name="title_activity_registrar_anuncio">Registrar Anuncio</string>
	<string name="title_activity_actualizar_anuncio">Actualizar Anuncio</string>
	<string name="title_activity_anuncio">Ver Anuncio</string>
	<string name="title_activity_lista_anuncios">Ver Anuncios</string>
    <string name="busquedaAvanzada">	Busqueda avanzada</string>
    <string name="buscarPor">"       Buscar por:"</string>
    <string name="campoBusqueda">¿Qué estas buscando?</string>
    <string name="porNombre">Nombre</string>
    <string name="porDescripcion">Descripción</string>
    <string name="porCategoria">Categoria</string>
    <string name="porDireccion">Dirección</string>
    <string name="favorito">Favorito</string>   
    <string name="title_activity_busqueda_pdi">Busqueda Avanzada</string>
    <string name="title_activity_buscador_pdi">Busqueda Avanzada</string>
    <string name="mensajeBusqueda">" "</string>
    <string name="title_activity_busqueda_avanzada">Busqueda Avanzada</string>
    <string name="title_activity_respuesta_busqueda_handler">Resultados encontrados</string>
    <string name="nombreUsuario">Nombre:</string>
    <string name="elNombreDelUsuario">Nombre no establecido</string>
    <string name="apellidoUsuario">Apellido:</string>
    <string name="elApellidoDelUsuario">Apellido no establecido</string>
    <string name="correoElectronicoUsuario">Correo electrónico:</string>
    <string name="elCorreoDelUsuario">correo@mail.com</string>
    <string name="imagenPerfilUsuario">Imagen de perfil:</string>
    <string name="modificarPerfil">Modificar perfil</string>
    <string name="title_activity_actualizar_perfil">Actualizar mi perfil</string>
    <string name="tomarFoto">Tomar una foto</string>
    <string name="imagenArchivo">Seleccionar una imagen de galería</string>
    <string name="contraseniaUsuario">Contraseña:</string>
    <string name="cambiarContrasenia">Cambiar contraseña</string>
    <string name="title_activity_cambiar_contrasenia">Cambiar contraseña</string>
    <string name="contraseniaActual">Escriba su contraseña actual:</string>
    <string name="contraseniaNueva">Escriba su nueva contraseña:</string>
    <string name="confirmaConatrasenia">Confirme su nueva contraseña:</string>
    <string name="title_activity_tomar_foto">Tomar Foto</string>
</resources>
